--- a/edition.html
+++ b/edition.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		
-	这是第2一个版本的测试内容，更新了:xxxxxxx |v1.0|www.baidu.com
+	这是2第2一个版本的测试内容，更新了:xxxxxxx |v1.0|www.baidu.com
 		
 	</body>
 </html>
