--- a/edition.html
+++ b/edition.html
@@ -5,8 +5,8 @@
 		<title></title>
 	</head>
 	<body>
-		
-	这是2第2一个版本的测试内容，更新了:xxxxxxx |v1.0|www.baidu.com
-		
+		<div>
+	这是22第2一个版本的测试内容，更新了:xxxxxxx |v1.0|www.baidu.com
+		</div>
 	</body>
 </html>
