--- a/edition.html
+++ b/edition.html
@@ -5,8 +5,16 @@
 		<title></title>
 	</head>
 	<body>
-		<div>
-	这是22第2一个版本的测试内容，更新了:xxxxxxx |v1.0|www.baidu.com
+		<div class="banben">
+		v1.0
+		</div >
+		<div class="neir">
+		这是22第2一个版本的测试内容，更新了:xxxxxxx 
 		</div>
+	
+	<div class="wanz">
+		www.baidu.com
+		</div>
+		
 	</body>
 </html>
